--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.password=12345678
 spring.datasource.initialize=true
 spring.jpa.hibernate.ddl-auto=update
 
-spring.sql.init.data-locations = classpath:/employeedb.sql
+#spring.sql.init.data-locations = classpath:/employeedb.sql
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
