EmployeeController class refactored.Interfaces naming renamed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/employeedb
+#spring.datasource.url=jdbc:postgresql://employeedb.cbgda3k9gjwp.us-east-2.rds.amazonaws.com:5432
+#spring.datasource.username=postgres
 spring.datasource.username=admin
 spring.datasource.password=12345678
 spring.datasource.initialize=true
 spring.jpa.hibernate.ddl-auto=update
 
 #spring.sql.init.data-locations = classpath:/employeedb.sql
+# JPA settings
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=false
