logback logger added.spring actuator added. level log swith function added. search by part of first/last name restcontroller added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
 # JPA settings
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=false
+
+management.endpoints.web.exposure.include=loggers
+management.endpoint.loggers.enabled=true
