swagger api added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=false
 management.endpoints.web.exposure.include=loggers
 management.endpoint.loggers.enabled=true
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
