--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.generate-ddl=false
 management.endpoints.web.exposure.include=loggers
 management.endpoint.loggers.enabled=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+#logback configuration
+log.folder=logs
+log.history=120
+PATTERN=%d{HH:mm:ss.SSS} [%thread] %highlight(%-5level) %logger{36} [employee-management] - %msg%n
