db datasource url updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,17 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.datasource.url=jdbc:postgresql://localhost:5432/employeedb
-spring.datasource.url=jdbc:postgresql://employeedb.cbgda3k9gjwp.us-east-2.rds.amazonaws.com:5432/
-spring.datasource.username=postgres
+#spring.datasource.url=jdbc:postgresql://employeedb.cbgda3k9gjwp.us-east-2.rds.amazonaws.com:5432/
+spring.datasource.url=jdbc:postgresql://manny.db.elephantsql.com/kboihyqc
+#spring.datasource.username=postgres
+spring.datasource.username=kboihyqc
 #spring.datasource.username=admin
-spring.datasource.password=12345678
-spring.datasource.initialize=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.password=12345678
+spring.datasource.password=S94GtnGOs6IPe9w-f0_aR-B1JP9bk-dF
 #spring.sql.init.data-locations = classpath:/employeedb.sql
 # JPA settings
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=false
 management.endpoints.web.exposure.include=loggers
 management.endpoint.loggers.enabled=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-#logback configuration
-log.folder=logs
-log.history=120
-PATTERN=%d{HH:mm:ss.SSS} [%thread] %highlight(%-5level) %logger{36} [employee-management] - %msg%n
