--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.jpa.generate-ddl=false
 management.endpoints.web.exposure.include=loggers
 management.endpoint.loggers.enabled=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+#JMS broker settings
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
+spring.activemq.topic=test
